--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,7 +2,7 @@
 
 /* General Styling */
 body {
-  font-family: Arial, sans-serif;
+  font-family: "articulat-cf", sans-serif;
   background-color: #f4f4f9;
   margin: 0;
 }
