--- a/src/components/MainApp/MainApp.css
+++ b/src/components/MainApp/MainApp.css
@@ -38,7 +38,7 @@
 }
 
 .App {
-  font-family: Arial, sans-serif;
+  font-family: "articulat-cf", sans-serif;
   margin: 0;
   padding: 20px;
   text-align: center;
