--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -1,7 +1,7 @@
 /* src/components/MatterLoadingAnimation.css */
   canvas {
-    border-radius: 8px;
-    border: 1px solid rgba(255, 255, 255, 0.07);
+    border-radius: 8%;
+    border: 6px solid #004f84;
     max-width: 100%;
     max-height: 100%;
     user-select: none;
