--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -1,7 +1,8 @@
 /* src/components/MatterLoadingAnimation.css */
   canvas {
     border-radius: 8%;
-    border: 6px solid #004f84;
+    background: #8cd1ff;
+    border: 6px solid #3498db;
     max-width: 100%;
     max-height: 100%;
     user-select: none;
