--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -2,7 +2,7 @@
   canvas {
     border-radius: 8%;
     background: #8cd1ff;
-    border: 6px solid #000000;
+    border: 6px solid #bebebe;
     max-width: 100%;
     max-height: 100%;
     user-select: none;
