--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -1,9 +1,14 @@
 /* src/components/MatterLoadingAnimation.css */
   canvas {
     border-radius: 8%;
-    background: #8cd1ff;
+    background: #ceebff;
     border: 6px solid #bebebe;
     max-width: 100%;
     max-height: 100%;
     user-select: none;
   }
+
+bubble {
+    fillStyle: #004f84c2;
+    strokeStyle: #3498dbdc";
+}
