--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -11,7 +11,7 @@
   }
 
   :root {
-    --circle-fill: #004f84c2;
-    --circle-stroke: #3498dbdc;
+    --circle-fill: #004f84e6;
+    --circle-stroke: #3498db;
     --circle-linewidth: 6;
   }
