--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -196,15 +196,13 @@
     margin: 0 10px;
   }
 
-  .navbar-actions {
-    margin-bottom: 15px;
-  }
-
   .navbar-container {
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    height: 112px;
+    row-gap: 10px;
+    margin-top: 27px;
+    margin-bottom: 28px;
   }
 }
 
