--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,12 @@
 .home-page {
     max-width: 500px;
-    margin: 100px;
+}
+
+.home-page h1 {
+    margin-top: 0px;
+  }
+
+.home-content {
+    padding: 20px;
+    max-width: 400px;
 }
