--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -88,14 +88,15 @@ html {
 
 /* Login Button */
 .login-button {
-  padding: 10px 15px;
-  background-color: #007bff; /* Blue background */
-  color: #ffffff;
+  background-color: #007bff;
   border: none;
   border-radius: 4px;
-  font-size: 1rem;
+  color: #fff;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-size: 1rem;
+  padding: 7px 12px;
+  transition: background-color .3s ease;
+  font-weight: bold;
 }
 
 .login-button:hover {
