--- a/src/components/MatterLoadingAnimation.css
+++ b/src/components/MatterLoadingAnimation.css
@@ -21,6 +21,10 @@ canvas {
     transition: opacity 0.5s ease-in-out;
     position: relative;
   }
+
+  .dark-mode .loading-text {
+    color: #0099ffe5;
+  }
   
   .loading-text.fade {
     opacity: 0;
