--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,6 +19,18 @@
     color: #004F84;
   }
 
+  .dark-mode .cred {
+    color: #c7c7c7;
+  }
+
+  .dark-mode .period {
+    color: #fff;
+  }
+
+  .dark-mode .blue {
+    color: #3B9AF8;
+  }
+
   .theme-toggle-button:hover {
     background: none;
   }
@@ -119,12 +131,12 @@
   
   /* Adjust Login Button for Dark Mode */
   .dark-mode .login-button {
-    background-color: #555555; /* Dark gray background */
+    background-color: #3B9AF8; /* Dark gray background */
     color: #f5f5f5; /* Light text */
   }
   
   .dark-mode .login-button:hover {
-    background-color: #333333; /* Even darker on hover */
+    background-color: #004F84; /* Even darker on hover */
   }
   
   /* Adjust Logout Button for Dark Mode */
