--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -10,3 +10,9 @@
     padding: 20px;
     max-width: 400px;
 }
+
+form.search-bar {
+    align-items: center;
+    flex-direction: column;
+    gap: 0px;
+}
