--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,7 +11,7 @@
   }
   
   .dark-mode {
-    --navbar-bg: #2c2c2c;
+    --navbar-bg: #1f1f1f;
     --navbar-text: #f5f5f5;
     --button-bg: #555555;
     --button-text: #f5f5f5;
