--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -63,9 +63,9 @@
     color: var(--navbar-text);
     padding: 1rem 2rem;
     text-align: center;
-    border-top: 1px solid #ddd;
+    border-top: 5px solid #dcdcdc;
   }
 
   .dark-mode .footer {
-    border-top: 1px solid #444;
+    border-top: 5px solid #444;
   }
