--- a/src/components/UserProfile/components/AltTextCard.css
+++ b/src/components/UserProfile/components/AltTextCard.css
@@ -1,15 +1,5 @@
 /* frontend/src/components/AltTextCard.css */
 
-.alt-text-card {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 20px;
-    max-width: 500px;
-    margin: 20px auto;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-  
   .alt-text-card h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -18,6 +8,8 @@
   .alt-text-card ul {
     list-style-type: none;
     padding: 0;
+    margin: 0px;
+    margin-top: 10px;
   }
   
   .alt-text-card li {
