--- a/src/components/UserProfile/components/AltTextCard.css
+++ b/src/components/UserProfile/components/AltTextCard.css
@@ -1,5 +1,9 @@
 /* frontend/src/components/AltTextCard.css */
 
+.alt-text-card {
+    text-align: center;
+}
+
   .alt-text-card h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -10,6 +14,7 @@
     padding: 0;
     margin: 0px;
     margin-top: 10px;
+    text-align: center;
   }
   
   .alt-text-card li {
@@ -17,16 +22,18 @@
     font-size: 16px;
   }
   
-  .gauge-container {
-    margin: 20px auto;
-    width: 100%;
-    max-width: 400px;
-    position: relative;
-  }
-  
   .gauge-svg {
     width: 100%;
     height: auto;
+  }
+
+  .gauge-container svg {
+    position: relative;
+    top: -13px;
+    left: 0;
+    width: 100%;
+    margin-top: -93px;
+    overflow: hidden;
   }
   
   .checkbox-container {
