--- a/src/components/AltTextRating/AltTextRatingTool.css
+++ b/src/components/AltTextRating/AltTextRatingTool.css
@@ -234,8 +234,10 @@ body.dark-mode .alt-card {
     font-size: 0.8em;
   }
 
-.alt-text-rating-tool {
+  .alt-text-rating-tool {
     padding: 20px;
+    max-width: 400px;
+    margin: auto;
   }
   
   .alt-card {
@@ -246,9 +248,9 @@ body.dark-mode .alt-card {
   }
   
   .search-bar input {
-    width: 100%;
-    padding: 8px;
     font-size: 16px;
+    padding: 8px;
+    width: 90%;
   }
   
   .action-row {
@@ -385,4 +387,20 @@ body.dark-mode .alt-card {
     border-radius: 50%;
     margin-right: 7px;
     object-fit: cover;
+  }
+
+
+  .alt-text-rating-tool form.search-bar {
+    align-items: center;
+    gap: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0px;
+  }
+
+  .alt-text-rating-tool ul {
+    font-size: .7em;
+    list-style: none;
+    padding: 0;
+    margin-top: 0px;
   }
